* The basics of a model system